--- a/src/styles/01_settings/_settings.bootstrap.scss
+++ b/src/styles/01_settings/_settings.bootstrap.scss
@@ -121,7 +121,7 @@ $container-max-widths: (
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif: 'Helvetica Neue', Arial, 'Noto Sans',
+$font-family-sans-serif: Aeonik, 'Helvetica Neue', Arial, 'Noto Sans',
 	sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
 	'Noto Color Emoji';
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
