--- a/src/styles/06_objects/_objects.richtext.scss
+++ b/src/styles/06_objects/_objects.richtext.scss
@@ -27,6 +27,13 @@
 		}
 	}
 
+	a {
+		@apply text-inherit;
+		&:hover, &:Focus {
+			@apply text-inherit;
+		}
+	}
+
 	// ul,
 	// ol {
 	// 	padding-left: 0;
