--- a/src/styles/01_settings/_settings.fonts.scss
+++ b/src/styles/01_settings/_settings.fonts.scss
@@ -1,95 +1,46 @@
 // used by generic
-// $fonts: (
-// 	(
-// 		name: 'OpenSans',
-// 		path: '../../fonts/OpenSans-Regular',
-// 		weight: 400,
-// 		style: normal,
-// 		display: swap,
-// 		localnames: (
-// 			'Open Sans',
-// 			'OpenSans-Regular',
-// 			'OpenSans'
-// 		)
-// 	),
-// 	(
-// 		name: 'OpenSans',
-// 		path: '../../fonts/OpenSans-Italic',
-// 		weight: 400,
-// 		style: italic,
-// 		display: swap,
-// 		localnames: (
-// 			'Open Sans',
-// 			'OpenSans-Regular',
-// 			'OpenSans'
-// 		)
-// 	),
-// 	(
-// 		name: 'OpenSans',
-// 		path: '../../fonts/OpenSans-SemiBold',
-// 		weight: 600,
-// 		style: normal,
-// 		display: swap,
-// 		localnames: (
-// 			'Open Sans',
-// 			'OpenSans-Regular',
-// 			'OpenSans'
-// 		)
-// 	),
-// 	(
-// 		name: 'OpenSans',
-// 		path: '../../fonts/OpenSans-SemiBoldItalic',
-// 		weight: 600,
-// 		style: italic,
-// 		display: swap,
-// 		localnames: (
-// 			'Open Sans',
-// 			'OpenSans-Regular',
-// 			'OpenSans'
-// 		)
-// 	),
-// 	(
-// 		name: 'OpenSans',
-// 		path: '../../fonts/OpenSans-Bold',
-// 		weight: 700,
-// 		style: normal,
-// 		display: swap,
-// 		localnames: (
-// 			'Open Sans',
-// 			'OpenSans-Regular',
-// 			'OpenSans'
-// 		)
-// 	),
-// 	(
-// 		name: 'OpenSans',
-// 		path: '../../fonts/OpenSans-BoldItalic',
-// 		weight: 700,
-// 		style: italic,
-// 		display: swap,
-// 		localnames: (
-// 			'Open Sans',
-// 			'OpenSans-Regular',
-// 			'OpenSans'
-// 		)
-// 	),
-// 	(
-// 		name: 'Poppins',
-// 		path: '../../fonts/Poppins-Regular',
-// 		weight: 400,
-// 		style: normal,
-// 		display: swap,
-// 		localnames: (
-// 			Poppins
-// 		)
-// 	),
-// 	(
-// 		name: 'Poppins',
-// 		path: '../../fonts/Poppins-Bold',
-// 		weight: 700,
-// 		style: normal,
-// 		display: swap,
-// 		localnames: (
-// 			Poppins
-// 		)
-// 	)
-// );
+$fonts: (
+	(
+		name: 'Ranua',
+		path: '../fonts/Ranua-Demi',
+		weight: 500,
+		style: normal,
+		display: swap,
+		localnames: (
+			'Ranua',
+			'Ranua-Demi',
+			'RanuaDemi'
+		)
+	),
+	(
+		name: 'Aeonik',
+		path: '../fonts/Aeonik-Regular',
+		weight: 400,
+		style: normal,
+		display: swap,
+		localnames: (
+			'Aeonik',
+			'Aeonik-Regular',
+		)
+	),
+	(
+		name: 'Aeonik',
+		path: '../fonts/Aeonik-Medium',
+		weight: 500,
+		style: normal,
+		display: swap,
+		localnames: (
+			'Aeonik-Medium',
+		)
+	),
+	(
+		name: 'Aeonik',
+		path: '../fonts/Aeonik-Bold',
+		weight: 700,
+		style: normal,
+		display: swap,
+		localnames: (
+			'Aeonik-Bold',
+		)
+	),
+);
