--- a/src/modules/ImageWithListText.scss
+++ b/src/modules/ImageWithListText.scss
@@ -73,7 +73,7 @@ ul {
 
 .swiper {
 	&-pagination {
-		.c-imagewithlisttext & {
+		.c-imagewithlisttext.c-imagewithlisttext & {
 			@apply bg-yellow;
 			@apply w-22;
 			@apply flex;
@@ -86,7 +86,7 @@ ul {
 			bottom: 0;
 		}
 
-		.c-imagewithlisttext--left & {
+		.c-imagewithlisttext--left.c-imagewithlisttext--left & {
 			right: auto;
 			left: 0;
 			width: calc((1/6 * 100%) + 10px);
@@ -94,24 +94,24 @@ ul {
 		}
 
 		&-bullet {
-			.c-imagewithlisttext.c-imagewithlisttext & {
+			.c-imagewithlisttext.c-imagewithlisttext.c-imagewithlisttext  & {
 				margin-top: .3125rem;
 				margin-bottom: .3125rem;
 				background: #f9f9f9;
 				opacity: 1;
 			}
 			&-active {
-				.c-imagewithlisttext.c-imagewithlisttext & {
+				.c-imagewithlisttext.c-imagewithlisttext.c-imagewithlisttext & {
 					background: #333;
 				}
 			}
 		}
 	}
 	&-wrapper {
-		.c-imagewithlisttext & {
+		.c-imagewithlisttext.c-imagewithlisttext & {
 			width: calc(100% - 88px);
 		}
-		.c-imagewithlisttext--multiple & {
+		.c-imagewithlisttext--multiple.c-imagewithlisttext--multiple & {
 			@apply w-5/6;
 		}
 	}
