--- a/src/styles/05_utilities/_utilities.base.scss
+++ b/src/styles/05_utilities/_utilities.base.scss
@@ -11,7 +11,18 @@
     }
     &-input-unstyled {
 		@include input-unstyled;
-    }
+	}
+
+	&-link-cover {
+		&:before {
+			content: '';
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+		}
+	}
 
     // Background image reset
     // no-repeat, centered, and cover size
@@ -97,23 +108,33 @@
 			position: absolute 0;
 		}
 	}
+
+	&-elevation {
+		&-1 {
+			box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
+		}
+		&-2 {
+			box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
+		}
+		&-3 {
+			box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.15);
+		}
+	}
+
+	&-scrim {
+		&-hero {
+			background: linear-gradient(180deg, rgba(0, 0, 0, 0.478693) 0%, rgba(103, 103, 103, 0.250769) 53.97%, rgba(216, 216, 216, 8e-05) 86.37%);
+			mix-blend-mode: multiply;
+		}
+	}
 }
 
 input.u-input-unstyled {
 	@include input-unstyled;
 }
 
-.u-elevation {
-	&-1 {
-		box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
-	}
-	&-2 {
-		box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
-	}
-	&-3 {
-		box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.15);
-	}
-}
 /* crit:end */
+
+
 
 @tailwind screens;
