--- a/src/styles/04_base/_base.scss
+++ b/src/styles/04_base/_base.scss
@@ -57,7 +57,7 @@ input {
 	}
 
 	&::placeholder {
-		color: rgba($text, 0.8);
+		color: #767676;
 		/* crit */
 	}
 
@@ -110,6 +110,11 @@ textarea {
 
 	&:focus {
 		background-color: #fff;
+	}
+
+	&::placeholder {
+		color: #767676;
+		/* crit */
 	}
 }
 
