--- a/src/modules/ContentSlider.scss
+++ b/src/modules/ContentSlider.scss
@@ -36,6 +36,9 @@
 				@apply h-10;
 				color: inherit;
 				background: rgba(#fff, .7);
+				@include mq-down(sm) {
+					display: none;
+				}
 
 				&:after{
 					content: '';
