--- a/src/styles/01_settings/_settings.bootstrap.scss
+++ b/src/styles/01_settings/_settings.bootstrap.scss
@@ -93,8 +93,8 @@ $grid-gutter-width: 32px;
 $grid-breakpoints: (
 	xs: 0,
 	sm: 768px,
-	md: 992px,
-	lg: 1200px,
+	md: 1024px,
+	lg: 1312px,
 );
 
 // Grid containers
@@ -109,9 +109,9 @@ $grid-breakpoints: (
 // );
 
 $container-max-widths: (
-	sm: 720px,
-	md: 960px,
-	lg: 1312px + $grid-gutter-width,
+	sm: 768px,
+	md: 1024px,
+	lg: 1312px
 );
 
 @include _assert-ascending($container-max-widths, '$container-max-widths');
