--- a/src/styles/03_generic/_generic.tailwind.scss
+++ b/src/styles/03_generic/_generic.tailwind.scss
@@ -1,3 +1,9 @@
 @tailwind components;
+.container-fluid {
+	@include mq-down(sm) {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+}
 @tailwind utilities;
 
