--- a/src/modules/ImageWithListText.scss
+++ b/src/modules/ImageWithListText.scss
@@ -33,6 +33,12 @@
 
 			&-inner {
 				@apply min-h-115;
+
+				.c-imagewithlisttext--right & {
+					@include mq-down(sm) {
+						margin-right: -10px;
+					}
+				}
 			}
 		}
 	}
@@ -77,7 +83,7 @@ ul {
 	&-pagination {
 		.c-imagewithlisttext.c-imagewithlisttext & {
 			@apply bg-yellow;
-			@apply w-22;
+			@apply w-15;
 			@apply flex;
 			@apply flex-col;
 			@apply items-center;
@@ -86,6 +92,9 @@ ul {
 			right: 0;
 			top: 0;
 			bottom: 0;
+			@include mq(md) {
+				@apply w-22;
+			}
 		}
 
 		.c-imagewithlisttext--left.c-imagewithlisttext--left & {
