--- a/src/components/ArticleTile.scss
+++ b/src/components/ArticleTile.scss
@@ -32,7 +32,7 @@
 
 	&__link {
 		.c-article-detail__related &:focus,
-		.c-article-detail__related &:hover, {
+		.c-article-detail__related &:hover {
 			@apply text-white;
 		}
 	}
