[BH-17] white space doesn't match designs here https://www.figma.com/proto/XOZIW0OZJDSST9BcbcOO3y/20980_PTDN_ParklinePlace_S2_V2?node-id=162%3A717&v

--- a/src/modules/ImageWithListText.scss
+++ b/src/modules/ImageWithListText.scss
@@ -9,7 +9,8 @@
 	$_this: &;
 
 	&--withverticaloffset {
-		margin-top: (88px + 130px);
+		// margin-top: (88px + 130px);
+		margin-top: 185px;
 	}
 
 	&__inner {
@@ -20,7 +21,7 @@
 		&-media {
 			#{$_this}--withverticaloffset & {
 				@include mq(md) {
-					top: -176px;
+					top: -227px;
 				}
 			}
 
@@ -46,6 +47,13 @@
 	&__list {
 		h1,h2,h3 {
 			@apply normal-case;
+		}
+	}
+
+	.c-contenthero + & {
+		@include mq-down(sm) {
+			@apply pt-24.5;
+			margin-top: -103px;
 		}
 	}
 }
