--- a/src/modules/ImageWithListText.scss
+++ b/src/modules/ImageWithListText.scss
@@ -10,7 +10,9 @@
 
 	&--withverticaloffset {
 		// margin-top: (88px + 130px);
-		margin-top: 185px;
+		@include mq(md) {
+			margin-top: 185px;
+		}
 	}
 
 	&__inner {
