--- a/src/components/GlobalFooter.scss
+++ b/src/components/GlobalFooter.scss
@@ -4,4 +4,11 @@
 			max-width: 114px;
 		}
 	}
+
+	&__bottom {
+		@include mq-down(xs) {
+			@include fzlh(9px, 11px);
+			letter-spacing: -.12px;
+		}
+	}
 }
