--- a/src/modules/HomeHero.scss
+++ b/src/modules/HomeHero.scss
@@ -1,7 +1,14 @@
+@import '~swiper/swiper.scss';
+
 .c-homehero {
 	height: calc(100vh - 71px);
 	@include mq(sm) {
-		height: 986px;
+		height: calc(100vh - 127px);
+		min-height: 768px;
+	}
+	@include mq(md) {
+		height: calc(100vh - 127px);
+		min-height: 810px;
 	}
 
 	&__title{
@@ -15,6 +22,7 @@
 
 	&__fg{
 		&-inner{
+			padding-top: 138px;
 			padding-bottom: 138px;
 		}
 	}
