[BH-33] hack on updates page to wrap the text

--- a/src/modules/ContentHero.scss
+++ b/src/modules/ContentHero.scss
@@ -1,5 +1,9 @@
 .c-contenthero {
 	&__title {
+		.page-updates & {
+			max-width: 700px;
+		}
+
 		&--big {
 			@include fzlh(60px, 60px);
 			@include mq(md) {
