[BH-4] Tiles are rectangles (instead of squares) (ref: https://www.figma.com/proto/XOZIW0OZJDSST9BcbcOO3y/20980_PTDN_ParklinePlace_S2_V2?node-id=41

--- a/src/modules/ContentTiles.scss
+++ b/src/modules/ContentTiles.scss
@@ -28,5 +28,20 @@
 				min-height: 365px;
 			}
 		}
+
+		&-content {
+			@include mq(md) {
+				padding-top: 14%;
+				padding-bottom: 14%;
+			}
+			@include mq(1312px, 1439px) {
+				padding-top: 5%;
+				padding-top: 5%;
+			}
+			@include mq(2200) {
+				padding-top: 5vw;
+				padding-bottom: 5vw;
+			}
+		}
 	}
 }
