--- a/src/styles/01_settings/_settings.fonts.scss
+++ b/src/styles/01_settings/_settings.fonts.scss
@@ -6,11 +6,11 @@ $fonts: (
 		weight: 500,
 		style: normal,
 		display: swap,
-		localnames: (
-			'Ranua',
-			'Ranua-Demi',
-			'RanuaDemi'
-		)
+		// localnames: (
+		// 	'Ranua',
+		// 	'Ranua-Demi',
+		// 	'RanuaDemi'
+		// )
 	),
 	(
 		name: 'Aeonik',
@@ -18,10 +18,10 @@ $fonts: (
 		weight: 400,
 		style: normal,
 		display: swap,
-		localnames: (
-			'Aeonik',
-			'Aeonik-Regular',
-		)
+		// localnames: (
+		// 	'Aeonik',
+		// 	'Aeonik-Regular',
+		// )
 	),
 	(
 		name: 'Aeonik',
@@ -29,9 +29,9 @@ $fonts: (
 		weight: 500,
 		style: normal,
 		display: swap,
-		localnames: (
-			'Aeonik-Medium',
-		)
+		// localnames: (
+		// 	'Aeonik-Medium',
+		// )
 	),
 	(
 		name: 'Aeonik',
@@ -39,8 +39,8 @@ $fonts: (
 		weight: 700,
 		style: normal,
 		display: swap,
-		localnames: (
-			'Aeonik-Bold',
-		)
+		// localnames: (
+		// 	'Aeonik-Bold',
+		// )
 	),
 );
