--- a/src/modules/ImageWithListText.scss
+++ b/src/modules/ImageWithListText.scss
@@ -12,6 +12,10 @@
 		// margin-top: (88px + 130px);
 		@include mq(md) {
 			margin-top: 87px;
+
+			.c-contenttiles + & {
+				margin-top: 180px + 87px;
+			}
 		}
 	}
 
