[BH-110] is there a way to make the menu buttons stay a certain distance when viewing on a wide screen? they seem to be too far apart. Can we lock th

--- a/src/components/GlobalHeader.scss
+++ b/src/components/GlobalHeader.scss
@@ -29,6 +29,14 @@
 				letter-spacing: .25px;
 			}
 		}
+
+		&-inner {
+			@include mq(1921px) {
+				max-width: 1600px;
+				margin-left: auto;
+				margin-right: auto;
+			}
+		}
 	}
 
 	&__logo-main {
