fix unnecessary "border" on content hover tiles

--- a/src/styles/03_generic/_generic.tailwind.scss
+++ b/src/styles/03_generic/_generic.tailwind.scss
@@ -7,3 +7,9 @@
 }
 @tailwind utilities;
 
+.translate-y-full {
+	transform: translateY(101%)
+}
+.-translate-y-full {
+	transform: translateY(-101%)
+}
