--- a/src/styles/04_base/_base.scss
+++ b/src/styles/04_base/_base.scss
@@ -29,6 +29,10 @@ html {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-ms-overflow-style: scrollbar;
+
+	&.no-js {
+		overflow: auto;
+	}
 }
 
 body {
