[BH-143,149] Aeonik medium27px spacing after

--- a/src/modules/BuildingBackgroundedIntro.scss
+++ b/src/modules/BuildingBackgroundedIntro.scss
@@ -73,6 +73,15 @@
 		&-title {
 			@include fzlh(20px, 22px);
 		}
+
+		&-list {
+			h3 {
+				@apply font-sans;
+			}
+			> * + * {
+				margin-top: 27px;
+			}
+		}
 	}
 }
 
