--- a/src/styles/05_utilities/_utilities.base.scss
+++ b/src/styles/05_utilities/_utilities.base.scss
@@ -123,7 +123,7 @@
 
 	&-scrim {
 		&-hero {
-			background: linear-gradient(180deg, rgba(0, 0, 0, 0.478693) 0%, rgba(103, 103, 103, 0.250769) 53.97%, rgba(216, 216, 216, 8e-05) 86.37%);
+			background: linear-gradient(to right, rgba(0, 0, 0, 0.478693) 0%, rgba(103, 103, 103, 0.250769) 53.97%, rgba(216, 216, 216, 8e-05) 86.37%);
 			mix-blend-mode: multiply;
 		}
 	}
