[BH-145] please check design file for spacing and alignment of text elements

--- a/src/pageTemplates/EnquiryPageTemplate.scss
+++ b/src/pageTemplates/EnquiryPageTemplate.scss
@@ -1,8 +1,16 @@
 .c-enquirypagetemplate {
 	&__toprightcol {
 		.o-richtext {
+			> * + * {
+				margin-top: 12px;
+			}
 			h3 {
+				@include fzlh(20px, 22px);
 				@apply font-sans;
+				@apply normal-case;
+				font-weight: 700;
+				margin-top: 44px;
+				margin-bottom: 12px;
 			}
 		}
 	}
