--- a/src/components/ArticleTile.scss
+++ b/src/components/ArticleTile.scss
@@ -10,6 +10,10 @@
 		.c-article-detail__related & {
 			@apply text-inherit;
 		}
+
+		.c-article-featured & {
+			margin-bottom: 15px;
+		}
 	}
 
 	&__title{
@@ -27,6 +31,10 @@
 		.c-article-featured &,
 		.c-article-detail__related & {
 			@apply text-inherit;
+		}
+
+		.c-article-featured & {
+			@include fzlh(18px, 24px);
 		}
 	}
 
