[BH-155] there's a weird interaction happening here when the screen is reduced, the yellow line brakes up

--- a/src/modules/ContentSlider.scss
+++ b/src/modules/ContentSlider.scss
@@ -7,6 +7,10 @@
 
 .c-contentslider {
 	&__media {
+		height: 330px;
+		@screen sm {
+			height: 480px;
+		}
 		@screen md {
 			height: 882px;
 		}
