[BH-124] The height of this section is too tall as the prompt element with the arrow is cut off. Can we please reduce the height of the image so that it's visible when at full screen?

--- a/src/modules/HomeHero.scss
+++ b/src/modules/HomeHero.scss
@@ -3,12 +3,12 @@
 .c-homehero {
 	height: calc(100vh - 71px);
 	@include mq(sm) {
-		height: calc(100vh - 127px);
-		min-height: 768px;
+		height: calc(100vh - 143px);
+		min-height: 768px - 30px;
 	}
 	@include mq(md) {
-		height: calc(100vh - 127px);
-		min-height: 810px;
+		height: calc(100vh - 143px);
+		min-height: 810px - 30px;
 	}
 
 	&__title{
