[BH-169] adjust slide media inner a bit to match up with the design

--- a/src/modules/ImageWithListText.scss
+++ b/src/modules/ImageWithListText.scss
@@ -46,6 +46,17 @@
 						margin-right: -10px;
 					}
 				}
+
+				#{$_this}--left#{$_this}--withverticaloffset & {
+					@screen md {
+						min-height: 660px
+					}
+				}
+				#{$_this}--right#{$_this}--withverticaloffset & {
+					@screen md {
+						min-height: 600px
+					}
+				}
 			}
 		}
 	}
