[BH-163] KM: Meet the team – I don’t like the repetitive buildings in this section. Can you please look at what Hoyne did in the Leasing IM in this s

--- a/src/modules/MeetTheTeam.scss
+++ b/src/modules/MeetTheTeam.scss
@@ -5,9 +5,14 @@
 		}
 		&-inner {
 			min-height: 350px;
+			width: calc(100% + 1px);
 		}
 		&-text {
 			@include fzlh(16px, 20px);
+		}
+
+		.transition {
+			will-change: transform, opacity;
 		}
 	}
 }
