fixed article detail ul/ol list style

--- a/src/modules/ArticleDetail.scss
+++ b/src/modules/ArticleDetail.scss
@@ -8,6 +8,18 @@
 			text-decoration: underline;
 		}
 
+		ul, ol {
+			padding-left: 18px;
+		}
+
+		ul {
+			list-style-type: disc;
+		}
+
+		ol {
+			list-style-type: decimal;
+		}
+
 		blockquote {
 			@include fzlh(21px, 25.2px);
 			letter-spacing: -.5px;
