[BH-191] whitelist purge css

--- a/src/modules/HomeHero.scss
+++ b/src/modules/HomeHero.scss
@@ -36,12 +36,14 @@
 
 	&__slide {
 		&--1 {
+			/*! purgecss start ignore */
 			&.swiper-slide-active,
 			&.swiper-slide-duplicate-active{
 				.BaseImg__img {
 					transform: translateX(-5%) scale(1.1);
 				}
 			}
+			/*! purgecss end ignore */
 		}
 	}
 }
