--- a/src/modules/HomeHero.scss
+++ b/src/modules/HomeHero.scss
@@ -9,8 +9,7 @@
 		min-height: 768px - 30px;
 	}
 	@include mq(md) {
-		height: calc(100vh - 143px);
-		min-height: 810px - 30px;
+		height: calc(100vh - 105px - 16px);
 	}
 
 	&__title{
