--- a/src/modules/ContentHero.scss
+++ b/src/modules/ContentHero.scss
@@ -16,16 +16,14 @@
 
 	&__twobar {
 		@include mq-down(sm)	{
-			max-height: 110px;
+			max-height: 100px;
 		}
 	}
 
 	&__bottom-container {
 		&.is-use-two-bar {
-			margin-top: calc(-110px / 2);
-			@include mq(md) {
-				margin-top: calc(-147px / 2);
-			}
+			// margin-top: calc(-110px / 2);
+			margin-top: calc(-100px / 2);
 		}
 	}
 
@@ -40,5 +38,9 @@
 				}
 			}
 		}
+	}
+
+	&__twobar {
+		height: 100px;
 	}
 }
