update content slider

--- a/src/modules/ContentSlider.scss
+++ b/src/modules/ContentSlider.scss
@@ -20,7 +20,11 @@
 		}
 	}
 	&__top {
-		min-height: 90px;
+		/*! purgecss start ignore */
+		&.has-title {
+			min-height: 90px;
+		}
+		/*! purgecss end ignore */
 	}
 }
 /*! purgecss start ignore */
