--- a/src/modules/ContentSlider.scss
+++ b/src/modules/ContentSlider.scss
@@ -19,13 +19,8 @@
 			height: auto;
 		}
 	}
-	&__top {
-		min-height: 45px;
-		/*! purgecss start ignore */
-		&.has-title {
-			min-height: 90px;
-		}
-		/*! purgecss end ignore */
+	&__yellowbar {
+		max-width: calc(994 / 1440 * 100%);
 	}
 }
 /*! purgecss start ignore */
