--- a/src/modules/MediaSliderWithRevealList.scss
+++ b/src/modules/MediaSliderWithRevealList.scss
@@ -7,16 +7,12 @@
 
 
 .c-mediasliderwithreveallist {
-	&__slider {
-		@include mq(md) {
-			height: 735px
-		}
-	}
 
-	&__bg {
-		@include mq(md) {
-			width: calc(110% + 20px);
-			margin-left: calc(-10% - 20px);
+	&__media {
+		&-inner {
+			@include mq(md) {
+				padding-bottom: percentage(600/710);
+			}
 		}
 	}
 
