[BH-202] The overlay layer on these images seems darker than the design file.

--- a/src/styles/05_utilities/_utilities.base.scss
+++ b/src/styles/05_utilities/_utilities.base.scss
@@ -127,6 +127,10 @@
 
 			@supports(mix-blend-mode: multiply) {
 				background: theme('colors.grey.medium');
+
+				&--home {
+					background: #c4c4c4;
+				}
 			}
 		}
 	}
