[BH-209] Theres a slight black vertical line on either side of the video container

--- a/src/modules/ContentSlider.scss
+++ b/src/modules/ContentSlider.scss
@@ -79,11 +79,17 @@
 			}
 		}
 	}
+
+	&-slide {
+		max-width: 100%;
+	}
 }
 
 .plyr {
 	&__poster {
-		background: transparent;
+		&#{&} {
+			background-size: cover;
+		}
 	}
 	&__control {
 		&--overlaid {
