--- a/src/modules/ImageWithListText.scss
+++ b/src/modules/ImageWithListText.scss
@@ -27,7 +27,7 @@
 		&-media {
 			#{$_this}--withverticaloffset & {
 				@include mq(md) {
-					top: -45px;
+					margin-top: -45px;
 				}
 			}
 
@@ -78,6 +78,12 @@
 
 		> * + * {
 			margin-top: 25px;
+		}
+	}
+
+	&__text{
+		.page-home & {
+			max-width: 362px;
 		}
 	}
 
