[BH-234] too much white space here, pls check design file

--- a/src/modules/BuildingBackgroundedIntro.scss
+++ b/src/modules/BuildingBackgroundedIntro.scss
@@ -70,7 +70,7 @@
 			&-text {
 				#{$_this}__smallsection-row:first-child & {
 					@include mq(md) {
-						padding-top: 15%;
+						padding-top: 220px;
 					}
 				}
 			}
